fix(NotificationView): improve scroll experience of too long notification-content

--- a/app/client/stylesheets/components/PartupUpdateContent.scss
+++ b/app/client/stylesheets/components/PartupUpdateContent.scss
@@ -1,7 +1,22 @@
 .pa-PartupUpdateContent {
+    position: relative;
+
+    &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 20px;
+        background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, #fff 75%, #fff 100%);
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #fff 90%, #fff 100%);
+        z-index: 1;
+    }
+
     .pa-Content {
         max-height: 150px;
         overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
     }
 
     .pa-Heading {
